--- a/css2-5/davaleba.css
+++ b/css2-5/davaleba.css
@@ -78,7 +78,6 @@ a{
     margin-top: 100px;
     background-color: #F1E8FF;
     width: 100%;
-    height: 275vh;
 }
 
 /* mainHeader */
@@ -176,13 +175,17 @@ a{
 
 /* mainQuestions */
 
+#MyOwnTest{
+    padding-bottom: 50px;
+}
+
 #mainQuestions{
     margin-left: 45px;
     margin-top: 120px;
     border-radius: 24px;
     background: #FFF;
     width: 95%;
-    height: 106vh;
+    /* height: 106vh; */
 }
 #mainQuestions h1 {
     padding-top: 30px;
@@ -244,6 +247,7 @@ a{
 
 #mainReviews{
     padding-top: 30px;
+    margin-bottom: 70px;
     margin-left: 45px;
     margin-top: 120px;
     border-radius: 24px;
@@ -271,6 +275,7 @@ a{
     line-height: var(--Line-height-text-xl, 30px);
     }
 #mainReviewsBoxes{
+    margin-bottom: 70px;
     margin-top: 64px;
     margin-left: 64px;
 }
